--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "vite"
   },
   "devDependencies": {
+    "@types/three": "^0.169.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "vite": "^5.4.8"
